<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginBottom="5dp"
                android:text="@string/registro"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fields"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:background="@drawable/round_corner"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@style/AppHintText">

                    <EditText
                        android:id="@+id/textInputEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:theme="@style/AppEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_textInputLayoutPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_password"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    app:hintTextAppearance="@style/AppHintText"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/textInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:theme="@style/AppEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_textInputLayoutConfirmPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_password"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    app:hintTextAppearance="@style/AppHintText"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/textInputEditTextConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:theme="@style/AppEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/register_textInputLayoutPeso"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_corner_attributes"
                            app:hintTextAppearance="@style/AppHintText"
                            android:layout_marginEnd="5dp"
                            android:padding="5dp"
                            app:passwordToggleEnabled="true"
                            android:layout_marginRight="5dp">

                            <EditText
                                android:id="@+id/textInputEditTextPeso"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/peso"
                                android:inputType="number"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:theme="@style/AppEditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:text="@string/kg"
                            android:layout_width="25dip"
                            android:layout_height="25dip"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/register_textInputLayoutAltura"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_corner_attributes"
                            android:layout_marginStart="5dp"
                            android:padding="5dp"
                            app:hintTextAppearance="@style/AppHintText"
                            app:passwordToggleEnabled="true"
                            android:layout_marginLeft="5dp">

                            <EditText
                                android:id="@+id/textInputEditTextAltura"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/altura"
                                android:inputType="numberDecimal"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:theme="@style/AppEditText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:text="@string/cm"
                            android:layout_width="25dip"
                            android:layout_height="25dip"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/appCompatButtonLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_shape"
                android:onClick="register"
                android:textColor="@android:color/white"
                android:text="@string/text_register" />

            <TextView
                android:id="@+id/textViewLinkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/text_already_member"
                android:onClick="goToLogin"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>