<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/text_login_"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:background="@drawable/round_corner"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@style/AppHintText">

                    <EditText
                        android:id="@+id/textInputEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:layout_margin="5dp"
                        android:theme="@style/AppEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_textInputLayoutPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_password"
                    android:padding="5dp"
                    app:hintTextAppearance="@style/AppHintText"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/textInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_margin="5dp"
                        android:textColor="@android:color/black"
                        android:theme="@style/AppEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/appCompatButtonLogin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_shape"
                    android:layout_marginBottom="20dp"
                    android:onClick="logIn"
                    android:textColor="@android:color/white"
                    android:text="@string/text_login" />

                <TextView
                    android:id="@+id/textViewLinkRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/text_not_member"
                    android:onClick="goToRegister"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>