<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/cambiar_objetivo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/introduce_el_nuevo_objetivo_de_pasos"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nuevoObjetivo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="6dp"
        app:hintTextAppearance="@style/AppHintText">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/round_corners_pasos"
                android:padding="5dp"
                app:hintTextAppearance="@style/AppHintText"
                app:passwordToggleEnabled="true"
                android:layout_marginLeft="5dp">

                <EditText
                    android:id="@+id/nuevoObjetivo_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nuevo_objetivo"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:theme="@style/AppEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="20dp"
                android:text="@string/pasos"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp" />

        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/cancel_button"
                android:textColor="@android:color/white"
                android:text="Cancelar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/accept_button"
                android:text="Guardar" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>